fixed spacing for mobile

--- a/client/src/plus/index.scss
+++ b/client/src/plus/index.scss
@@ -399,13 +399,14 @@
           background-size: cover;
           margin: 0 auto;
           position: relative;
-          top: -20px;
+          top: -28px;
           max-width: 450px;
           max-height: calc(450px * 1.15);
           margin-bottom: -24px;
 
           @media #{$mq-small-desktop-and-up} {
             display: none;
+            top: -20px;
           }
         }
 
@@ -482,7 +483,7 @@
             background-size: cover;
             margin: 0 auto;
             position: relative;
-            top: -80px;
+            top: -27px;
             max-width: 450px;
             max-height: calc(450px * 1.11);
             margin-bottom: -24px;
@@ -508,12 +509,12 @@
         }
 
         .section-secondary-content {
-          padding-bottom: 90px;
           margin-top: -45px;
           text-align: center;
 
           @media #{$mq-small-desktop-and-up} {
             display: flex;
+            padding-bottom: 90px;
             align-items: flex-start;
             flex-direction: column;
             justify-content: center;
